--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -1,5 +1,5 @@
-$fontSans: "Helvetica Neue", Helvetica, Arial, sans-serif
-$fontMonospace: "Consolas", Liberation Mono, Menlo, Courier, monospace
+$fontSans: 'Segoe UI', Tahoma, 'Geneva', Verdana, sans-serif
+$fontMonospace: Liberation Mono, Menlo, Courier, monospace,  "Consolas"
 
 $alpha: #666
 $beta: #222
