changing font sizes

--- a/_sass/components/header.sass
+++ b/_sass/components/header.sass
@@ -18,8 +18,9 @@
             opacity: .8
 
     > .title
-        font-size: 4rem
+        font-size: 3rem
         margin: 0 0 13px
+        font-weight: $thin-font
 
     > .description
         font-size: 1.85rem
