--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -1,10 +1,10 @@
 $fontSans: 'Segoe UI', Tahoma, 'Geneva', Verdana, sans-serif
-$fontMonospace: Liberation Mono, Menlo, Courier, monospace,  "Consolas"
+$fontMonospace: Liberation Mono, Menlo, Courier, monospace, "Consolas"
 
 $alpha: #666
 $beta: #222
 $gama: #aaa
-$delta: #4b0082
+$delta: #2ba0b3
 $epsilon: #ededed
 $omega: #fff
 $zeta: #000
