fixing image style

--- a/_sass/pages/post.sass
+++ b/_sass/pages/post.sass
@@ -33,6 +33,8 @@
         display: inline-block
 
     // general style
+    > img
+        object-fit: contain
     > h2,
     > h3,
     > h4
@@ -58,3 +60,4 @@
             margin: 1em 0
         .next
             text-align: right
+
