--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -80,6 +80,8 @@ figcaption
 blockquote
 	padding-left: 15px
 	border-left: 3px solid #eee
+	margin-left: 1rem
+	marign-right: 1rem
 
 hr
 	border: none
