--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -78,10 +78,8 @@ figcaption
 		font-size: 1.2rem
 
 blockquote
-	padding-left: 15px
-	border-left: 3px solid #eee
-	margin-left: 1rem
-	marign-right: 1rem
+	padding-left: 1.5rem
+	border-left: .3rem solid #eee
 
 hr
 	border: none
