--- a/_sass/pages/home-blog-projects.sass
+++ b/_sass/pages/home-blog-projects.sass
@@ -1,5 +1,6 @@
 .home,
 .blog,
+.potpourri,
 .projects
     
     margin-top: 125px
@@ -26,6 +27,7 @@
 
 .home > .list,
 .blog > .list,
+.potpourri > .list,
 .projects > .list
     > .item
         display: block
@@ -66,6 +68,7 @@
         color: $alpha
 
 .blog > .list > .item > .url,
+.potpourri > .list > .item > .url,
 .projects > .list > .item > .url
     > .title
         display: inline
