--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,10 +8,13 @@ layout: page
 
 <h1 class="title">{{ page.title }}</h1>
 
-<span class="date">
-    <time datetime="{{ page.date | date:"%d-%m-%Y" }}">{{ page.date | date: "%A. %B %d, %Y" }}</time>
-    {% if site.read-time %} - {% include read-time.html %}{% endif %}
-</span>
+{% if page.potpourri %}
+    {%else %}
+        <span class="date">
+            <time datetime="{{ page.date | date:"%d-%m-%Y" }}">{{ page.date | date: "%A. %B %d, %Y" }}</time>
+            {% if site.read-time %} - {% include read-time.html %}{% endif %}
+        </span>
+{% endif %}
 
 {% if site.show-tags %}
     <div class="post-tags">
