adding playlist option to post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,6 +24,16 @@ layout: page
     </div>
 {% endif %}
 
+{% if page.playlist %} 
+    <div class="text-center">
+        <div class="social-links">
+            <a class="link" data-title="spotify.com/{{ page.playlist }}" href="https://open.spotify.com/playlist/{{ page.playlist }}" target = "_blank" rel="noopener">
+                <i class="fa-brands fa-spotify fa-xl"></i>
+            </a>
+        </div>
+    </div>
+{% endif %}
+
 {{content}}
 
 {% if site.post-advance-links contains page.category %}
