--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: page
 
 <h1 class="title">{{ page.title }}</h1>
 
-{% if page.potpourri %}
+{% if page.nodate or page.potpourri %}
     {% if page.playlist %} 
         <div class="text-center">
             <div class="social-links">
