--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -47,16 +47,18 @@ layout: page
 {{content}}
 
 {% if site.post-advance-links contains page.category %}
-    <div class="blog-navigation">
-        {% if page.previous.hidden == false and page.previous.url %}
-            <a class="prev" href="{{ site.url }}{{ page.previous.url }}">&laquo; {{ page.previous.title }}</a>
-        {% else %}
-            <a class="prev"></a>
-        {% endif %}
-        {% if page.next.hidden == false and page.next.url %}
-            <a class="next" href="{{ site.url }}{{ page.next.url }}">{{ page.next.title }} &raquo;</a>
-        {% endif %}
-    </div>
+    {% unless page.hidden %}
+        <div class="blog-navigation">
+            {% if page.previous.hidden == false and page.previous.url %}
+                <a class="prev" href="{{ site.url }}{{ page.previous.url }}">&laquo; {{ page.previous.title }}</a>
+            {% else %}
+                <a class="prev"></a>
+            {% endif %}
+            {% if page.next.hidden == false and page.next.url %}
+                <a class="next" href="{{ site.url }}{{ page.next.url }}">{{ page.next.title }} &raquo;</a>
+            {% endif %}
+        </div>
+    {% endunless %}
 {% endif %}
 
 {% if site.related %}
