--- a/_sass/components/nav.sass
+++ b/_sass/components/nav.sass
@@ -25,7 +25,8 @@
 
         > .item > .link
             font-size: 1.4rem
-            padding: 20px 10px
+            padding-top: 20px 
+        
 
 .nav-home
     margin-top: 40px
