--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,39 @@
 ---
 layout: page
 ---
+    {% if page.image and page.headerImage %}
+        <img class="title-image" src="{{ page.image }}" alt="{{ page.title }}">
+    {% endif %}
 
-{% if page.image and page.headerImage %}
-    <img class="title-image" src="{{ page.image }}" alt="{{ page.title }}">
-{% endif %}
+    <h1 class="title">{{ page.title }}</h1>
 
-<h1 class="title">{{ page.title }}</h1>
+    {% if page.nodate or page.potpourri %}
+        {% if page.playlist %} 
+            <div class="text-center">
+                <div class="social-links">
+                    <a class="link" data-title="spotify.com/{{ page.playlist }}" href="https://open.spotify.com/playlist/{{ page.playlist }}" target = "_blank" rel="noopener">
+                        <i class="fa-brands fa-spotify fa-xl"></i>
+                    </a>
+                </div>
+            </div>
+            <br>
+        {% endif %}
+    {%else %}
+            <span class="date">
+                <time datetime="{{ page.date | date:"%d-%m-%Y" }}">{{ page.date | date: "%A. %B %d, %Y" }}</time>
+                {% if site.read-time %} - {% include read-time.html %}{% endif %}
+            </span>
+    {% endif %}
 
-{% if page.nodate or page.potpourri %}
-    {% if page.playlist %} 
+    {% if site.show-tags %}
+        <div class="post-tags">
+            {% for tag in page.tags %}
+                <a class="item" href="{{ site.url }}/tags/#{{ tag | slugify }}">{{ tag }}</a>
+            {% endfor %}
+        </div>
+    {% endif %}
+
+    <!-- {% if page.playlist %} 
         <div class="text-center">
             <div class="social-links">
                 <a class="link" data-title="spotify.com/{{ page.playlist }}" href="https://open.spotify.com/playlist/{{ page.playlist }}" target = "_blank" rel="noopener">
@@ -17,58 +41,35 @@ layout: page
                 </a>
             </div>
         </div>
-        <br>
+    {% endif %} -->
+
+    <div class="{% if site.animation %}animated{% endif %}">
+        {{content}}
+    </div>
+
+    {% if site.post-advance-links contains page.category %}
+        {% unless page.hidden %}
+            <div class="blog-navigation">
+                {% if page.previous.hidden == false and page.previous.url %}
+                    <a class="prev" href="{{ site.url }}{{ page.previous.url }}">&laquo; {{ page.previous.title }}</a>
+                {% else %}
+                    <a class="prev"></a>
+                {% endif %}
+                {% if page.next.hidden == false and page.next.url %}
+                    <a class="next" href="{{ site.url }}{{ page.next.url }}">{{ page.next.title }} &raquo;</a>
+                {% endif %}
+            </div>
+        {% endunless %}
     {% endif %}
-{%else %}
-        <span class="date">
-            <time datetime="{{ page.date | date:"%d-%m-%Y" }}">{{ page.date | date: "%A. %B %d, %Y" }}</time>
-            {% if site.read-time %} - {% include read-time.html %}{% endif %}
-        </span>
-{% endif %}
 
-{% if site.show-tags %}
-    <div class="post-tags">
-        {% for tag in page.tags %}
-            <a class="item" href="{{ site.url }}/tags/#{{ tag | slugify }}">{{ tag }}</a>
-        {% endfor %}
-    </div>
-{% endif %}
+    {% if site.related %}
+        {% include related.html %}
+    {% endif %}
 
-<!-- {% if page.playlist %} 
-    <div class="text-center">
-        <div class="social-links">
-            <a class="link" data-title="spotify.com/{{ page.playlist }}" href="https://open.spotify.com/playlist/{{ page.playlist }}" target = "_blank" rel="noopener">
-                <i class="fa-brands fa-spotify fa-xl"></i>
-            </a>
-        </div>
-    </div>
-{% endif %} -->
+    {% if site.show-author %}
+        {% include author.html %}
+    {% endif %}
 
-{{content}}
-
-{% if site.post-advance-links contains page.category %}
-    {% unless page.hidden %}
-        <div class="blog-navigation">
-            {% if page.previous.hidden == false and page.previous.url %}
-                <a class="prev" href="{{ site.url }}{{ page.previous.url }}">&laquo; {{ page.previous.title }}</a>
-            {% else %}
-                <a class="prev"></a>
-            {% endif %}
-            {% if page.next.hidden == false and page.next.url %}
-                <a class="next" href="{{ site.url }}{{ page.next.url }}">{{ page.next.title }} &raquo;</a>
-            {% endif %}
-        </div>
-    {% endunless %}
-{% endif %}
-
-{% if site.related %}
-    {% include related.html %}
-{% endif %}
-
-{% if site.show-author %}
-    {% include author.html %}
-{% endif %}
-
-{% if site.disqus.categories contains page.category %}
-    {% include disqus.html %}
-{% endif %}
+    {% if site.disqus.categories contains page.category %}
+        {% include disqus.html %}
+    {% endif %}
