--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -64,15 +64,17 @@ pre
 
 figcaption
 	position: relative
-	top: -20px
+	top: 20px
 	left: 0
 	right: 0
+	bottom: 0
+	padding-bottom: 2rem
 	margin: 0 auto
 	width: 100%
 	text-align: center
 	font-size: 1.3rem
 	color: $gama
-	font-weight: 320
+	font-weight: 330
 
 	@media #{$mobile}
 		font-size: 1.2rem
