no nav for poetry

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,3 +1,4 @@
+{% unless page.category == 'poetry' %}
 <nav class="{% if page.title == "Home" %}nav-home{% else %}nav{% endif %}">
     <ul class="list">
         {% if page.title != "Home" %}
@@ -51,3 +52,4 @@
         {% endif %}
     </ul>
 </nav>
+{% endunless %}
