--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer-main">
-    {{ site.title }} © {{ site.time | date: '%Y' }}
+    {{ site.title }} ~ {{ site.time | date: '%Y' }}
 
     <!-- <a class="link" href="{{ site.url }}/feed.xml" target="_blank">
         <i class="fa-solid fa-rss"></i>
