--- a/_includes/potpourri.html
+++ b/_includes/potpourri.html
@@ -1,7 +1,7 @@
-<link rel="stylesheet" type="text/css" href="../gallery.css"/>
+<link rel="stylesheet" type="text/css" href="/gallery.css"/>
 {% for image in page.images %}
         <div class="container">
-            <img src="../assets/images/gallery/{{ page.rel_path }}/{{ image.path }}" alt="{{ image.alt }}" class="image">
+            <img src="/assets/images/gallery/{{ page.rel_path }}/{{ image.path }}" alt="{{ image.alt }}" class="image">
             <div class="overlay">
                 <div class="text">
                     <p style="color:white;">
