--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,7 @@
    or page.title == "Projects"
    or page.title == "Tags"
    or page.title == "Potpourri"
+   or page.title == "Activities"
 %}{% assign showHeader = true %}{% endif %}
 
 {% if showHeader == true %}
