--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -34,7 +34,7 @@
         {% if site.activities == true %}
             {% if page.title != "Activities" %}
                 <li class="item">
-                    <a class="link" href="{% link _posts/2000-01-03-wistem.html %}">Activities</a>
+                    <a class="link" href="{{ site.url }}/activities">Activities</a>
                 </li>
             {% endif %}
         {% endif %}
