--- a/_sass/pages/home-blog-projects.sass
+++ b/_sass/pages/home-blog-projects.sass
@@ -28,6 +28,7 @@
 
 .home > .list,
 .blog > .list,
+.activities > .list,
 .projects > .list
     > .item
         display: block
@@ -91,6 +92,7 @@
 
 .blog > .list > .item > .url,
 .potpourri > .list > .item > .url,
+.activities > .list > .item > .url,
 .projects > .list > .item > .url
     > .title
         display: inline
