--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -37,6 +37,12 @@
         </a>
     {% endif %}
 
+    {% if site.letterboxd %}
+        <a class="link" data-title="letterboxd.com/{{ site.letterboxd}}" href="https://letterboxd.com/{{ site.letterboxd }}" target="_blank" rel="noopener"> 
+            <i class="fa-solid fa-film"></i>
+        </a>
+    {% endif %}
+
     {% if site.email %}
         <a class="link" data-title="{{ site.email }}" href="mailto:{{ site.email }}"  rel="noopener">
             <i class="fa-regular fa-envelope"></i>
