change color vars for dark mode

--- a/_sass/base/variables-dark.sass
+++ b/_sass/base/variables-dark.sass
@@ -1,16 +1,16 @@
-$fontSans: "Helvetica Neue", Helvetica, Arial, sans-serif
-$fontMonospace: "Consolas", Liberation Mono, Menlo, Courier, monospace
+$fontSans: 'Segoe UI', Tahoma, 'Geneva', Verdana, sans-serif
+$fontMonospace: Liberation Mono, Menlo, Courier, monospace, "Consolas"
 
-$alpha: #aaa
+$alpha: #d6d6d6
 $beta: #ededed
-$gama: #666
-$delta: #9300ff
+$gama: #969696
+$delta: #10b5ad
 $epsilon: #222
 $omega: #000
 $zeta: #fff
-$kappa: #1E2D24
+$kappa: #293d31
 
-$thin-font: 400
+$thin-font: 340
 
 $mobile: "only screen and (max-width: 400px)"
 $tablet: "only screen and (min-width: 400px) and (max-width: 1050px)"
