adding option for titles in potpourri

--- a/_includes/potpourri.html
+++ b/_includes/potpourri.html
@@ -5,6 +5,9 @@
             <div class="overlay">
                 <div class="text">
                     <p style="color:white;">
+                        {% if image.title %}
+                        <i>{{ image.title }},</i>
+                        {% endif %}
                         {{ image.name }}
                     <br>
                         {{ image.loc }}
