shifting around order of post items

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,18 +19,7 @@ layout: page
 
     <h1 class="title">{{ page.title }}</h1>
 
-    {% if page.nodate or page.category == 'potpourri' %}
-        {% if page.playlist %} 
-            <div class="text-center">
-                <div class="social-links">
-                    <a class="link" data-title="spotify.com/{{ page.playlist }}" href="https://open.spotify.com/playlist/{{ page.playlist }}" target = "_blank" rel="noopener">
-                        <i class="fa-brands fa-spotify fa-xl"></i>
-                    </a>
-                </div>
-            </div>
-            <br>
-        {% endif %}
-    {%else %}
+    {% if page.category != 'potpourri' or page.nodate != true %}
             <span class="date">
                 <time datetime="{{ page.date | date:"%d-%m-%Y" }}">{{ page.date | date: "%A. %B %d, %Y" }}</time>
                 {% if site.read-time %} - {% include read-time.html %}{% endif %}
@@ -44,10 +33,19 @@ layout: page
             {% endfor %}
         </div>
     {% endif %}
+    
+    {% if page.playlist %} 
+        <div class="text-center">
+            <div class="social-links">
+                <a class="link" data-title="spotify.com/{{ page.playlist }}" href="https://open.spotify.com/playlist/{{ page.playlist }}" target = "_blank" rel="noopener">
+                    <i class="fa-brands fa-spotify fa-xl"></i>
+                </a>
+            </div>
+        </div>
+    {% endif %}
 
     <div class="{% if site.animation %}animated{% endif %}">
         {{content}}
-        
         {% if page.category == 'potpourri' %}
             {% include potpourri.html %}
         {% endif %}
