--- a/gallery.css
+++ b/gallery.css
@@ -30,7 +30,7 @@
     position: relative;
     top: 50%;
     left: 50%;
-    padding: 1em 1em;
+    padding: .75em .75em;
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
