wider margins of tags

--- a/_sass/pages/post.sass
+++ b/_sass/pages/post.sass
@@ -13,7 +13,8 @@
         text-transform: uppercase
         text-align: center
         display: block
-        margin-bottom: 6rem
+        margin-top: 2rem 
+        margin-bottom: 3rem
         letter-spacing: 1px
         -webkit-font-smoothing: antialiased
         text-rendering: optimizeLegibility
