--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: page
 
     <h1 class="title">{{ page.title }}</h1>
 
-    {% if page.category != 'potpourri' or page.nodate != true %}
+    {% if page.category != 'potpourri' and page.nodate != true %}
             <span class="date">
                 <time datetime="{{ page.date | date:"%d-%m-%Y" }}">{{ page.date | date: "%A. %B %d, %Y" }}</time>
                 {% if site.read-time %} - {% include read-time.html %}{% endif %}
