--- a/gallery.css
+++ b/gallery.css
@@ -26,7 +26,8 @@
   }
   
   .text {
-    font-size: 3.2vmin;
+    font-size: .8rem; 
+    /* font-size: 3.2vmin; */
     position: relative;
     top: 50%;
     left: 50%;
