--- a/gallery.css
+++ b/gallery.css
@@ -1,6 +1,6 @@
 .container {
     position: relative;
-    margin: 2rem;
+    margin: 1rem;
   }
   
   .image {
@@ -26,8 +26,8 @@
   }
   
   .text {
-    font-size: .8rem; 
-    /* font-size: 3.2vmin; */
+    /* font-size: .8rem;  */
+    font-size: 3.5vh;
     position: relative;
     top: 50%;
     left: 50%;
