--- a/gallery.css
+++ b/gallery.css
@@ -27,7 +27,7 @@
   
   .text {
     /* font-size: .8rem;  */
-    font-size: 3.5vh;
+    font-size: 3.5vw;
     position: relative;
     top: 50%;
     left: 50%;
