--- a/gallery.css
+++ b/gallery.css
@@ -26,8 +26,8 @@
   }
   
   .text {
-    /* font-size: .8rem;  */
-    font-size: 6vw;
+    font-size: .8rem; 
+    /* font-size: 6vw; */
     position: relative;
     top: 50%;
     left: 50%;
