--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -41,6 +41,12 @@
         <a class="link" data-title="letterboxd.com/{{ site.letterboxd}}" href="https://letterboxd.com/{{ site.letterboxd }}" target="_blank" rel="noopener"> 
             <i class="fa-solid fa-film"></i>
         </a>
+    {% endif %}~
+
+    {% if site.beli %}
+        <a class="link" data-title="beliapp.co/app/{{ site.beli }}" href="https://belliapp.co/app/{{ site.beli }}" target="_blank" rel="noopener">
+            <i class="fa-solid fa-utensils"></i>
+        </a>
     {% endif %}
 
     {% if site.email %}
